<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="exp.privatebank.view.fragment.InfoDialogFragment">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:columnCount="2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/typeForm"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_row="0"
            android:gravity="end"
            android:text="@string/device_type"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cityForm"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_row="1"
            android:gravity="end"
            android:text="@string/device_city"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/placeForm"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_row="2"
            android:gravity="end"
            android:text="@string/device_place"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/addressForm"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_row="3"
            android:gravity="end"
            android:text="@string/device_address"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/typeAnswer"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:layout_row="0"
            android:text="TextView"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cityAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:layout_row="1"
            android:text="TextView"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/placeAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:layout_row="2"
            android:text="TextView"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/addressAnswer"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:layout_row="3"
            android:text="TextView"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

    </GridLayout>

    <TextView
        android:id="@+id/wayQuestion"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/way_ask"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wayQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/button_selector"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:textColor="@color/buttonColorText"
            android:text="@string/yes" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textColor="@color/buttonColorText" />
    </FrameLayout>

</RelativeLayout>
